crates/ladder_types/tests/ui/generated/should_fail/test__kiss_ladder__R1_minus_R0.stderr
error[E0277]: cannot subtract `Relative<0>` from `Relative<1>`
 --> tests/ui/generated/should_fail/test__kiss_ladder__R1_minus_R0.rs:5:22
  |
5 |    let _ = R1::new() - R0::new();
  |                      ^ no implementation for `Relative<1> - Relative<0>`
  |
  = help: the trait `Sub<Relative<0>>` is not implemented for `Relative<1>`
  = help: the following other types implement trait `Sub<Rhs>`:
            <Relative<0> as Sub<Relative<1>>>
            <Relative<0> as Sub>
            <Relative<1> as Sub<Relative<2>>>
            <Relative<1> as Sub>
            <Relative<2> as Sub<Relative<3>>>
            <Relative<2> as Sub>
            <Relative<3> as Sub<Relative<4>>>
            <Relative<3> as Sub>
